--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilerplate",
+  "name": "katia",
   "version": "1.0.0",
-  "description": "Boiler",
+  "description": "",
   "keywords": [
     "Gatsby",
     "web"
@@ -12,26 +12,11 @@
     "build:dir": "mkdir -p public/icons/",
     "build:favicons": "node scripts/favicons",
     "build:gatsby": "gatsby build",
-    "build": "npm run build:dir && npm run build:favicons && npm run build:gatsby",
+    "build": "npm run build:gatsby",
     "prebuild": "rimraf tailwind.custom.css && postcss tailwind.css -o tailwind.custom.css",
     "predevelop": "rimraf tailwind.custom.css && postcss tailwind.css -o tailwind.custom.css",
     "serve": "gatsby serve",
     "clean": "rimraf .cache public"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ],
-    "*.{js,json,md}": [
-      "prettier --write",
-      "git add"
-    ]
   },
   "dependencies": {
     "@emotion/core": "^10.0.5",
@@ -52,15 +37,15 @@
     "gatsby-plugin-offline": "^2.0.19",
     "gatsby-plugin-react-helmet": "^3.0.4",
     "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.15",
+    "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-webpack-size": "0.0.3",
     "gatsby-source-prismic": "^2.1.0",
     "gatsby-transformer-sharp": "^2.1.9",
     "node-uuid": "^1.4.8",
     "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
     "react-helmet": "^5.2.0",
     "react-pose": "^4.0.4",
     "tailwindcss": "^0.7.3"
@@ -81,6 +66,6 @@
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2"
   },
-  "author": "Alexei Accio <alexei.accio@gmail.com>",
+  "author": "",
   "license": "MIT"
 }
