--- a/package.json
+++ b/package.json
@@ -7,65 +7,30 @@
     "web"
   ],
   "scripts": {
-    "lint": "eslint --fix src/**/*.js && prettier --write src/**/*.{js,json,md}",
     "develop": "gatsby develop",
-    "build:dir": "mkdir -p public/icons/",
-    "build:favicons": "node scripts/favicons",
-    "build:gatsby": "gatsby build",
-    "build": "npm run build:gatsby",
-    "prebuild": "rimraf tailwind.custom.css && postcss tailwind.css -o tailwind.custom.css",
-    "predevelop": "rimraf tailwind.custom.css && postcss tailwind.css -o tailwind.custom.css",
+    "build": "gatsby build",
     "serve": "gatsby serve",
-    "clean": "rimraf .cache public"
+    "clean": "gatsby clean"
   },
   "dependencies": {
-    "@emotion/core": "^10.0.5",
-    "@emotion/styled": "^10.0.5",
-    "babel-plugin-tailwind": "^0.1.10",
-    "crocks": "^0.11.1",
-    "dotenv": "^6.2.0",
-    "emotion": "^10.0.5",
-    "emotion-server": "^10.0.5",
-    "favicons": "^5.3.0",
-    "gatsby": "^2.0.67",
-    "gatsby-image": "^2.0.25",
-    "gatsby-plugin-emotion": "^3.0.1",
-    "gatsby-plugin-google-analytics": "^2.0.6",
-    "gatsby-plugin-manifest": "^2.0.12",
-    "gatsby-plugin-netlify": "^2.0.6",
-    "gatsby-plugin-netlify-cache": "^1.0.0",
-    "gatsby-plugin-offline": "^2.0.19",
-    "gatsby-plugin-react-helmet": "^3.0.4",
-    "gatsby-plugin-robots-txt": "^1.3.0",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-sitemap": "^2.0.3",
-    "gatsby-plugin-webpack-size": "0.0.3",
-    "gatsby-source-prismic": "^2.1.0",
-    "gatsby-transformer-sharp": "^2.1.9",
+    "@emotion/core": "^10.0.22",
+    "@emotion/styled": "^10.0.23",
+    "gatsby": "^2.18.5",
+    "gatsby-image": "^2.2.34",
+    "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-sharp": "^2.3.4",
+    "gatsby-source-filesystem": "^2.1.39",
+    "gatsby-source-prismic": "3.0.0-beta.15",
+    "gatsby-theme-tailwindcss": "^1.0.2",
+    "gatsby-transformer-sharp": "^2.3.6",
     "node-uuid": "^1.4.8",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-helmet": "^5.2.0",
-    "react-pose": "^4.0.4",
-    "tailwindcss": "^0.7.3"
-  },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.0",
-    "eslint-plugin-react": "^7.11.1",
-    "husky": "^1.2.1",
-    "lint-staged": "^7.3.0",
-    "postcss": "^7.0.5",
-    "postcss-cli": "^6.0.0",
-    "prettier": "^1.15.3",
-    "rimraf": "^2.6.2"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "sharp": "^0.23.3"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "dotenv": "^8.2.0"
+  }
 }
