--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "gatsby": "^2.18.5",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-emotion": "^4.1.16",
+    "gatsby-plugin-layout": "^1.1.16",
     "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-source-filesystem": "^2.1.39",
     "gatsby-source-prismic": "3.0.0-beta.15",
     "gatsby-theme-tailwindcss": "^1.0.2",
     "gatsby-transformer-sharp": "^2.3.6",
+    "lodash": "^4.17.15",
     "node-uuid": "^1.4.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
